syntax = "proto3";

package user;

option go_package = "generated/user";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserProfile(UserId) returns (UserProfile);
  rpc UpdateUserProfile(UpdateUserPRequest) returns (UpdateUserPResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (Success);
}

message UserId {
  string id = 1;
}

message UserProfile {
  string id = 1;
  string username = 2;
  string email = 3;
  string fullName = 4;
  string nativeLanguage = 5;
  repeated string learningLanguage = 6;
  string createdAt = 7;
}

message UpdateUserPRequest {
  string id = 1;
  string fullName = 2;
  string nativeLanguage = 3;
  string username = 4;
}

message UpdateUserPResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string fullName = 4;
  string nativeLanguage = 5;
  string updatedAt = 6;
}

message Success {
  string Message = 1;
}

message ChangePasswordRequest {
  string id = 1;
  string oldPassword = 2;
  string newPassword = 3;
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string password = 3;
  string full_name = 4;
  string native_language = 5;
}

message CreateUserResponse {
  string id = 1;
  string username = 2;
  string email = 3;
  string full_name = 4;
  string native_language = 5;
  string createdAt = 6;
}